# ChangeLog for app-emulation/emul-linux-x86-java-sun-jdk
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-java/ChangeLog,v 1.59 2008/09/16 20:09:04 serkan Exp $

  17 Oct 2008; Serkan Kaba <serkan@gentoo.org>
  emul-linux-x86-java-sun-jdk-1.5.0.16.ebuild:
  Fix $S.

  06 Oct 2008; Jesse Farinacci <jieryn@gmail.com>
  +files/emul-linux-x86-java-sun-jdk-1.5.env, +files/construct.sh,
  +metadata.xml, +emul-linux-x86-java-sun-jdk-1.5.0.16.ebuild:
  initial import
