@@ -1,6 +1,10 @@
+AUX construct-1.6.sh 6799 RMD160 061317637fbdeeaaa7e7104dbc390bcf1bda763c SHA1 516bf0e3a8868c327c1120fc0bcd840d0c3a5c0b SHA256 4369309ba29da4dcdbda4ea614e2db00ff7e3a801fa58b897de818fe33d78e80
 AUX construct.sh 6964 RMD160 8e3de41f59023cb9bf6040fe5f5a36d1b39552e3 SHA1 bc24071dba36878abf7a2da88bfc063eb3727da1 SHA256 47847c81ee85bd1b7dba6e91c2d7757c15a8930f4748dc926e00553bc89fcbd6
 AUX emul-linux-x86-java-sun-jdk-1.5.env 882 RMD160 de530e69c8b3564e278cbb58cd01feded3b450c0 SHA1 3978e7dbbd280577578df1bc135aec2a29e2d937 SHA256 92c05924282ae9dbaccf0a5a8fb5fca9eceb77d194c195b7ce50a3726ce27b65
+AUX emul-linux-x86-java-sun-jdk-1.6.env 891 RMD160 59bc83699f17395aebc79bf5564ac2f3767aa614 SHA1 1e431f6a7990c4c0684e95a73da32e132183331b SHA256 6fd0124892813113266857364834fb8fa9f08db9f72045e639ec0b5acdfc4c09
 DIST jdk-5.0u16-dlj-linux-i586.bin 49676902 RMD160 e358a1c3e554eb06cd4362ad175a95004661f38e SHA1 56e29e2d96fca31f6b0e34c208c13c82c523098d SHA256 0df21a7e636740c9812e3e1cd4002e914150acf3c806930d5128d05b37c28a08
-EBUILD emul-linux-x86-java-sun-jdk-1.5.0.16.ebuild 3331 RMD160 f8dfb7881e8d1cc1c9d7699eff1206b1ffce6b07 SHA1 cfa58ac3c53d05f1575367942b034b3e6a313f52 SHA256 321115240de99552b7480a13d6ab7b3e2ba5c33d5209873d0930754e1d5655b8
-MISC ChangeLog 551 RMD160 29a7b0b1478035c531971d174f289a4a7bc3d386 SHA1 a051b34c08ddb098941262020a801a402b9447de SHA256 2aca783ad5ebcf0e0f7f3b143c2a2f7049ce7879f405150a52d349e5e1cfedda
+DIST jdk-6u10-dlj-linux-i586.bin 80041857 RMD160 a280938fb2ff5208294b76afa9e8c8f459f64841 SHA1 f4dc9d497042c5196afb7ae75257de8614673ea6 SHA256 dae79e8c56090ac3fb4ac3fe0df9faf6a0c9694a89ef978dce0ab970557ad264
+EBUILD emul-linux-x86-java-sun-jdk-1.5.0.16.ebuild 3368 RMD160 c94cf3d0a92cd53b55aebabbc9175304ac16a625 SHA1 aaea6502b04748cd40a8ff808b64ad21deb3ddfd SHA256 a8a08d32099bb50cd1a0d70cada9eb82ef9884ce00d1c75117efad3652856e5a
+EBUILD emul-linux-x86-java-sun-jdk-1.6.0.10.ebuild 3609 RMD160 af8d704daf64e2e495aff8cf916ac5a0bb435793 SHA1 04ba164629e2b3fd86959e6962f70ae6b1258a1b SHA256 93645312e435afa04f316cfe0403647773809d02eaf0cff22118292ae1bef68d
+MISC ChangeLog 746 RMD160 4cc496824fd7545f3a14471c9142837a995f4903 SHA1 5a5606cc28daddaf229c5394db66ff4d1b6b6d64 SHA256 62ce2ac890395246f8905fbf968fc2ce054e27c34b16b9d791408e0a42ecd380
 MISC metadata.xml 179 RMD160 eb23cc92511920eee7575e49cb97e3cc57ec2ffe SHA1 5f572596a2c474e808cdb21b8c2bf80f7cc011b1 SHA256 28110c7811a1bdcba5e23efc7018238140b1e9460b78215f914b7253a8c09ca8
